// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchHit should render SearchHit successfully 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="rowSpaceBetween"
      >
        <div
          class="titleRow"
        >
          <a
            href="Search hit title href"
          >
            <h2
              class="title"
            >
              Search hit title
            </h2>
          </a>
          <div>
            <span
              class="fds-paragraph fds-paragraph--md fds-tag fds-tag--info fds-tag--md"
            >
              <span
                class="fds-paragraph fds-paragraph--md fds-tag fds-tag--neutral fds-tag--md"
              >
                Search hit status tag
              </span>
            </span>
          </div>
        </div>
      </div>
      Search hit content
      Search hit labels
    </div>
  </div>
</body>
`;

exports[`SearchHit should render SearchHit with empty title successfully 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="rowSpaceBetween"
      >
        <div
          class="titleRow"
        >
          <a
            href=""
          >
            <h2
              class="title"
            >
              Uten navn
            </h2>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
